argocd/argo-cd/istio-payment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-microservice-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-microservice
  template:
    metadata:
      labels:
        app: payment-microservice
        version: "1.0.0"
    spec:
      containers:
      - name: payment-microservice
        image: ivplay4689/payment-microservice-nodejs
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-microservice-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-microservice
  template:
    metadata:
      labels:
        app: payment-microservice
        version: "1.0.1"
        
    spec:
      containers:
      - name: payment-microservice
        image: ivplay4689/payment-microservice-nodejs
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mole
  template:
    metadata:
      labels:
        app: mole
    spec:
      containers:
      - name: curl
        image: curlimages/curl:8.9.1
        command: ["sh", "-c", "while true; do sleep 3600; done"]
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
          requests:
            memory: "256Mi"
            cpu: "100m"
      - name: fortio
        image: fortio/fortio:latest_release
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-fortio
        - containerPort: 8079
          name: grpc-ping
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
          requests:
            memory: "256Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-microservice
spec:
  selector:
    app: payment-microservice
  ports:
  - port: 80
    targetPort: 3000
---
