argocd/argo-cd/istio-payment/istio-integration-http-mirror.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: payment-microservice-istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "payment-service.cloud"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: payment-microservice-istio-virtualsvc
spec:
  hosts:
  - "payment-service.cloud"
  gateways:
  - payment-microservice-istio-gateway
  http:
  - route:
    - destination:
        host: payment-microservice
        subset: blue
      weight: 100
    mirror:
      host: payment-microservice
      subset: green
    mirrorPercentage:
      value: 100.0

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: payment-microservice-destrule
spec:
  host: payment-microservice # Kubernetes service, not hostname!!!
  subsets:
  - name: blue
    labels:
      version: "1.0.0"
  - name: green
    labels:
      version: "1.0.1"
