argocd/argo-cd/istio-payment/istio-integration-authorization.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-istio-pa-to-payment-microservice
spec:
  selector:
    matchLabels:
      app: payment-microservice
  rules:
  - from:
    - source:
        namespaces: ["istio-pa"]
  action: DENY
